fix results table width on mobile device screens

--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
-	#results_table { 
+	.results_table { 
 		width: 95%;
 	}
 	#searchfield {
